Add html for mobile index page

--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,111 @@
     <title>HTML Academy: Мишка</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
-
+    <h1>Онлайн магазин "Мишка": милые штуки ручной работы для дома</h1>
+    <header>
+      <img src="http://placehold.it/86x35" alt="Логотип магазина">
+      <input type="checkbox" name="menu">
+    </header>
+    <main>
+      <div>
+        <p>
+          Милые штуки ручной работы для дома
+        </p>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#">Предметы
+            интерьера</a></li>
+          <li><a href="#">Детские
+            игрушки</a></li>
+        </ul>
+      </nav>
+      <section>
+        <span>Вязаные корзинки</span>
+        <h2>Товар недели</h2>
+        <p>Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
+        <table>
+          <tr>
+            <th>Цвет:</th>
+            <td>"Тиффани"/серый</td>
+          </tr>
+          <tr>
+            <th>Диаметр:</th>
+            <td>25 см</td>
+          </tr>
+          <tr>
+            <th>Высота:</th>
+            <td>15 см</td>
+          </tr>
+        </table>
+        <img src="http://placehold.it/260x315" alt="Вязаная корзинка">
+        <span>Цена: 990 руб.</span>
+        <button>Заказать</button>
+      </section>
+      <section>
+        <h2>Коротко о нас:</h2>
+        <ul>
+          <li>Экологически
+            чистые материалы</li>
+          <li>Скандинавский стиль
+            по российской цене</li>
+          <li>Увеличивает лайки
+            на фотографиях</li>
+          <li>Связано вручную с
+            любовью и умилением</li>
+          <li>Поддержка отечественного производителя</li>
+          <li>Поставляется в
+            подарочной упаковке</li>
+        </ul>
+      </section>
+      <section>
+        <h2>Отзывы</h2>
+        <ul>
+          <li>
+            <blockquote>
+              Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
+            </blockquote>
+            <cite>
+              <span>Анастасия Красильникова</span>
+              <span>@misssssiskras</span>
+            </cite>
+          </li>
+        </ul>
+        <button>Предыдущий отзыв</button>
+        <button>Следующий отзыв</button>
+        <button>Написать</button>
+      </section>
+      <section>
+        <h2>Контакты</h2>
+        <address>
+          <span>e-mail:</span>
+          <a href="info@mimimishkashop.ru">info@mimimishkashop.ru</a>
+          <span>адрес:</span>
+          <span>
+          г. Санкт-Петербург,
+            ул. Большая Конюшенная,
+            д. 19/8, офис 101
+        </span>
+          <img src="http://placehold.it/322x457" alt="Карта">
+        </address>
+        <button>Напишите нам</button>
+      </section>
+    </main>
+    <footer>
+      <section>
+        <h2>
+          Мы в социальных сетях
+        </h2>
+        <ul>
+          <li><a href="#">Instagram</a></li>
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">Twitter</a></li>
+        </ul>
+      </section>
+      <span>
+        Разработано
+        <img src="http://placehold.it/27x34" alt="Логотип академии">
+      </span>
+    </footer>
   </body>
 </html>
