Reformat catalog file with prettier

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>HTML Academy: Мишка</title>
   </head>
   <body>
     <h1>Онлайн магазин "Мишка": милые штуки ручной работы для дома</h1>
     <header>
-      <img src="http://placehold.it/86x35" alt="Логотип магазина">
-      <input type="checkbox" name="menu">
+      <img src="http://placehold.it/86x35" alt="Логотип магазина" />
+      <input type="checkbox" name="menu" />
     </header>
     <main>
       <h1>Каталог товаров</h1>
@@ -17,7 +17,7 @@
         <ul>
           <li>
             <article>
-              <img src="http://placehold.it/260x195" alt="Зайчик-попрыгайчик">
+              <img src="http://placehold.it/260x195" alt="Зайчик-попрыгайчик" />
               <h1>Зайчик-попрыгайчик</h1>
               <span>Рост 30 см, вес 200 г</span>
               <span>1 200 руб.</span>
@@ -26,7 +26,7 @@
           </li>
           <li>
             <article>
-              <img src="http://placehold.it/260x195" alt="Корзинка для белья">
+              <img src="http://placehold.it/260x195" alt="Корзинка для белья" />
               <h1>Корзинка для белья</h1>
               <span>Диаметр 15 см, высота 10 см</span>
               <span>690 руб.</span>
@@ -35,7 +35,10 @@
           </li>
           <li>
             <article>
-              <img src="http://placehold.it/260x195" alt="Большая корзинка для игрушек">
+              <img
+                src="http://placehold.it/260x195"
+                alt="Большая корзинка для игрушек"
+              />
               <h1>Большая корзинка для игрушек</h1>
               <span>Диаметр 30 см, высота 30 см</span>
               <span>1 500 руб.</span>
@@ -46,8 +49,11 @@
       </section>
       <section>
         <h2>Процесс производства</h2>
-        <img src="http://placehold.it/260x150" alt="Процесс производства">
-        <p>По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
+        <img src="http://placehold.it/260x150" alt="Процесс производства" />
+        <p>
+          По просьбам наших любимых фолловеров мы сняли для вас подробное видео
+          о том, как появляются наши товары.
+        </p>
         <button>Сделать заказ</button>
       </section>
     </main>
@@ -64,7 +70,7 @@
       </section>
       <span>
         Разработано
-        <img src="http://placehold.it/27x34" alt="Логотип академии">
+        <img src="http://placehold.it/27x34" alt="Логотип академии" />
       </span>
     </footer>
   </body>
