--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,72 +6,81 @@
   </head>
   <body>
     <h1>Онлайн магазин "Мишка": милые штуки ручной работы для дома</h1>
-    <header>
-      <img src="http://placehold.it/86x35" alt="Логотип магазина" />
-      <input type="checkbox" name="menu" />
-    </header>
-    <main>
-      <h1>Каталог товаров</h1>
-      <section>
-        <h2>Список товаров</h2>
-        <ul>
-          <li>
-            <article>
-              <img src="http://placehold.it/260x195" alt="Зайчик-попрыгайчик" />
-              <h1>Зайчик-попрыгайчик</h1>
-              <span>Рост 30 см, вес 200 г</span>
-              <span>1 200 руб.</span>
-              <button>Добавить в корзину</button>
+    <header></header>
+    <main class="page-catalog">
+      <h1 class="page-catalog__heading">Каталог товаров</h1>
+      <section class="page-catalog__products-wrapper">
+        <h2 class="visually-hidden">Список товаров</h2>
+        <ul class="page-catalog__list">
+          <li class="page-catalog__element">
+            <article class="catalog-element">
+              <img
+                src="http://placehold.it/260x195"
+                alt="Зайчик-попрыгайчик"
+                class="catalog-element__image"
+              />
+              <h1 class="catalog-element__title">Зайчик-попрыгайчик</h1>
+              <span class="catalog-element__description"
+                >Рост 30 см, вес 200 г</span
+              >
+              <span class="catalog-element__price">1 200 руб.</span>
+              <a href="#" class="catalog-element__cart">
+                <span class="visually-hidden">Добавить в корзину</span>
+              </a>
             </article>
           </li>
-          <li>
-            <article>
-              <img src="http://placehold.it/260x195" alt="Корзинка для белья" />
-              <h1>Корзинка для белья</h1>
-              <span>Диаметр 15 см, высота 10 см</span>
-              <span>690 руб.</span>
-              <button>Добавить в корзину</button>
+          <li class="page-catalog__element">
+            <article class="catalog-element">
+              <img
+                src="http://placehold.it/260x195"
+                alt="Корзинка для белья"
+                class="catalog-element__image"
+              />
+              <h1 class="catalog-element__title">Корзинка для белья</h1>
+              <span class="catalog-element__description"
+                >Диаметр 15 см, высота 10 см</span
+              >
+              <span class="catalog-element__price">690 руб.</span>
+              <a href="#" class="catalog-element__cart">
+                <span class="visually-hidden">Добавить в корзину</span>
+              </a>
             </article>
           </li>
-          <li>
-            <article>
+          <li class="page-catalog__element">
+            <article class="catalog-element">
               <img
                 src="http://placehold.it/260x195"
                 alt="Большая корзинка для игрушек"
+                class="catalog-element__image"
               />
-              <h1>Большая корзинка для игрушек</h1>
-              <span>Диаметр 30 см, высота 30 см</span>
-              <span>1 500 руб.</span>
-              <button>Добавить в корзину</button>
+              <h1 class="catalog-element__title">
+                Большая корзинка для игрушек
+              </h1>
+              <span class="catalog-element__description"
+                >Диаметр 30 см, высота 30 см</span
+              >
+              <span class="catalog-element__price">1 500 руб.</span>
+              <a href="#" class="catalog-element__cart">
+                <span class="visually-hidden">Добавить в корзину</span>
+              </a>
             </article>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Процесс производства</h2>
-        <img src="http://placehold.it/260x150" alt="Процесс производства" />
-        <p>
+      <section class="page-catalog__manufacture-process">
+        <h2 class="page-catalog__process-heading">Процесс производства</h2>
+        <img
+          class="page-catalog__process-image"
+          src="http://placehold.it/260x150"
+          alt="Процесс производства"
+        />
+        <p class="page-catalog__process-description">
           По просьбам наших любимых фолловеров мы сняли для вас подробное видео
           о том, как появляются наши товары.
         </p>
-        <button>Сделать заказ</button>
+        <button class="page-catalog__button">Сделать заказ</button>
       </section>
     </main>
-    <footer>
-      <section>
-        <h2>
-          Мы в социальных сетях
-        </h2>
-        <ul>
-          <li><a href="#">Instagram</a></li>
-          <li><a href="#">Facebook</a></li>
-          <li><a href="#">Twitter</a></li>
-        </ul>
-      </section>
-      <span>
-        Разработано
-        <img src="http://placehold.it/27x34" alt="Логотип академии" />
-      </span>
-    </footer>
+    <footer></footer>
   </body>
 </html>
