Style catalog page

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,85 +3,133 @@
   <head>
     <meta charset="utf-8" />
     <title>HTML Academy: Мишка</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <h1>Онлайн магазин "Мишка": милые штуки ручной работы для дома</h1>
     <header></header>
     <main class="page-catalog">
-      <h1 class="page-catalog__heading">Каталог товаров</h1>
-      <section class="page-catalog__products-wrapper">
-        <h2 class="visually-hidden">Список товаров</h2>
-        <ul class="page-catalog__list">
-          <li class="page-catalog__element">
-            <article class="catalog-element">
-              <img
-                src="http://placehold.it/260x195"
-                alt="Зайчик-попрыгайчик"
-                class="catalog-element__image"
-              />
-              <h1 class="catalog-element__title">Зайчик-попрыгайчик</h1>
-              <span class="catalog-element__description"
-                >Рост 30 см, вес 200 г</span
-              >
-              <span class="catalog-element__price">1 200 руб.</span>
-              <a href="#" class="catalog-element__cart">
-                <span class="visually-hidden">Добавить в корзину</span>
-              </a>
-            </article>
+      <div class="page-catalog__heading-wrapper">
+        <h1 class="page-catalog__heading">Каталог товаров</h1>
+      </div>
+      <div class="page-catalog__wrapper">
+        <section class="page-catalog__list-wrapper">
+          <h2 class="visually-hidden">Список товаров</h2>
+          <ul class="page-catalog__list">
+            <li class="page-catalog__element">
+              <article class="catalog-element">
+                <img
+                  src="./img/photo-hare-mobile@1x.jpg"
+                  alt="Зайчик-попрыгайчик"
+                  class="catalog-element__image"
+                />
+                <div class="catalog-element__about">
+                  <h1 class="catalog-element__title">Зайчик-попрыгайчик</h1>
+                  <span class="catalog-element__description"
+                    >Рост 30 см, вес 200 г</span
+                  >
+                  <div class="catalog-element__about-bottom">
+                    <span class="catalog-element__price">1 200 руб.</span>
+                    <a href="#" class="catalog-element__cart">
+                      <span class="visually-hidden">Добавить в корзину</span>
+                    </a>
+                  </div>
+                </div>
+              </article>
+            </li>
+            <li class="page-catalog__element">
+              <article class="catalog-element">
+                <img
+                  src="./img/photo-bowl-mobile@1x.jpg"
+                  alt="Корзинка для белья"
+                  class="catalog-element__image"
+                />
+                <div class="catalog-element__about">
+                  <h1 class="catalog-element__title">Корзинка для белья</h1>
+                  <span class="catalog-element__description"
+                    >Диаметр 15 см, высота 10 см</span
+                  >
+
+                  <div class="catalog-element__about-bottom">
+                    <span class="catalog-element__price">690 руб.</span>
+                    <a href="#" class="catalog-element__cart">
+                      <span class="visually-hidden">Добавить в корзину</span>
+                    </a>
+                  </div>
+                </div>
+              </article>
+            </li>
+            <li class="page-catalog__element">
+              <article class="catalog-element">
+                <img
+                  src="./img/photo-toys-mobile@1x.jpg"
+                  alt="Большая корзинка для игрушек"
+                  class="catalog-element__image"
+                />
+                <div class="catalog-element__about">
+                  <h1 class="catalog-element__title">
+                    Большая корзинка для игрушек
+                  </h1>
+                  <span class="catalog-element__description"
+                    >Диаметр 30 см, высота 30 см</span
+                  >
+                  <div class="catalog-element__about-bottom">
+                    <span class="catalog-element__price">1 500 руб.</span>
+                    <a href="#" class="catalog-element__cart">
+                      <span class="visually-hidden">Добавить в корзину</span>
+                    </a>
+                  </div>
+                </div>
+              </article>
+            </li>
+          </ul>
+        </section>
+        <section class="man-process">
+          <div class="man-process__top">
+            <h2 class="man-process__heading">Процесс производства</h2>
+          </div>
+          <div class="man-process__image-wrapper">
+            <img
+              class="man-process__image"
+              src="./img/video-mobile@1x.jpg"
+              alt="Процесс производства"
+            />
+            <button class="man-process__play-button"></button>
+          </div>
+          <div class="man-process__about">
+            <p class="man-process__description">
+              По просьбам наших любимых фолловеров мы сняли для вас подробное
+              видео о том, как появляются наши товары.
+            </p>
+            <button class="button">Сделать заказ</button>
+          </div>
+        </section>
+      </div>
+    </main>
+    <footer class="footer">
+      <section class="footer__social-links">
+        <h2 class="visually-hidden">
+          Мы в социальных сетях
+        </h2>
+        <ul class="footer__link-list">
+          <li class="footer__list-item footer__list-item--inst">
+            <a href="#">
+              <span class="visually-hidden">Instagram</span>
+            </a>
           </li>
-          <li class="page-catalog__element">
-            <article class="catalog-element">
-              <img
-                src="http://placehold.it/260x195"
-                alt="Корзинка для белья"
-                class="catalog-element__image"
-              />
-              <h1 class="catalog-element__title">Корзинка для белья</h1>
-              <span class="catalog-element__description"
-                >Диаметр 15 см, высота 10 см</span
-              >
-              <span class="catalog-element__price">690 руб.</span>
-              <a href="#" class="catalog-element__cart">
-                <span class="visually-hidden">Добавить в корзину</span>
-              </a>
-            </article>
+          <li class="footer__list-item footer__list-item--fb">
+            <a href="#"> <span class="visually-hidden">Facebook</span></a>
           </li>
-          <li class="page-catalog__element">
-            <article class="catalog-element">
-              <img
-                src="http://placehold.it/260x195"
-                alt="Большая корзинка для игрушек"
-                class="catalog-element__image"
-              />
-              <h1 class="catalog-element__title">
-                Большая корзинка для игрушек
-              </h1>
-              <span class="catalog-element__description"
-                >Диаметр 30 см, высота 30 см</span
-              >
-              <span class="catalog-element__price">1 500 руб.</span>
-              <a href="#" class="catalog-element__cart">
-                <span class="visually-hidden">Добавить в корзину</span>
-              </a>
-            </article>
+          <li class="footer__list-item footer__list-item--twt">
+            <a href="#"> <span class="visually-hidden">Twitter</span></a>
           </li>
         </ul>
       </section>
-      <section class="page-catalog__manufacture-process">
-        <h2 class="page-catalog__process-heading">Процесс производства</h2>
-        <img
-          class="page-catalog__process-image"
-          src="http://placehold.it/260x150"
-          alt="Процесс производства"
-        />
-        <p class="page-catalog__process-description">
-          По просьбам наших любимых фолловеров мы сняли для вас подробное видео
-          о том, как появляются наши товары.
-        </p>
-        <button class="page-catalog__button">Сделать заказ</button>
-      </section>
-    </main>
-    <footer></footer>
+      <div class="footer__made-by">
+        <span class="footer__made-by-text">Разработано</span>
+        <a class="footer__made-by-link" href="https://htmlacademy.ru"
+          ><span class="visually-hidden">HTML Academy</span></a
+        >
+      </div>
+    </footer>
   </body>
 </html>
