--- a/source/index.html
+++ b/source/index.html
@@ -41,151 +41,151 @@
         </ul>
       </nav>
     </header>
-    <!--    <main class="page-main">-->
-    <!--      <div class="page-main__hero">-->
-    <!--        <p class="page-main__hero-text">-->
-    <!--          Милые штуки ручной работы для дома-->
-    <!--        </p>-->
-    <!--      </div>-->
-    <!--      <nav class="page-main__catalog-links">-->
-    <!--        <ul class="page-main__catalog-list">-->
-    <!--          <li class="page-main__catalog-item page-main__catalog-item&#45;&#45;interior">-->
-    <!--            <a href="#">Предметы интерьера</a>-->
-    <!--          </li>-->
-    <!--          <li class="page-main__catalog-item page-main__catalog-item&#45;&#45;toys">-->
-    <!--            <a href="#">Детские игрушки</a>-->
-    <!--          </li>-->
-    <!--        </ul>-->
-    <!--      </nav>-->
-    <!--      <section class="page-main__featured-product">-->
-    <!--        <span class="page-main__heading">Вязаные корзинки</span>-->
-    <!--        <h2 class="page-main__subheader">Товар недели</h2>-->
-    <!--        <p class="page-main__text">-->
-    <!--          Экологически чистая пряжа, ручная работа. Доступны в шести расцветках,-->
-    <!--          и трех размерах.-->
-    <!--        </p>-->
-    <!--        <table class="page-main__product-description">-->
-    <!--          <tr>-->
-    <!--            <th class="page-main__description-element">Цвет:</th>-->
-    <!--            <td class="page-main__description-value">"Тиффани"/серый</td>-->
-    <!--          </tr>-->
-    <!--          <tr>-->
-    <!--            <th class="page-main__description-element">Диаметр:</th>-->
-    <!--            <td class="page-main__description-value">25 см</td>-->
-    <!--          </tr>-->
-    <!--          <tr>-->
-    <!--            <th class="page-main__description-element">Высота:</th>-->
-    <!--            <td class="page-main__description-value">15 см</td>-->
-    <!--          </tr>-->
-    <!--        </table>-->
+    <main class="page-main">
+      <div class="page-main__hero">
+        <p class="page-main__hero-text">
+          Милые штуки ручной работы для дома
+        </p>
+      </div>
+      <nav class="page-main__catalog-links">
+        <ul class="page-main__catalog-list">
+          <li class="page-main__catalog-item page-main__catalog-item--interior">
+            <a href="#">Предметы интерьера</a>
+          </li>
+          <li class="page-main__catalog-item page-main__catalog-item--toys">
+            <a href="#">Детские игрушки</a>
+          </li>
+        </ul>
+      </nav>
+      <section class="page-main__featured-product">
+        <span class="page-main__heading">Вязаные корзинки</span>
+        <h2 class="page-main__subheader">Товар недели</h2>
+        <p class="page-main__text">
+          Экологически чистая пряжа, ручная работа. Доступны в шести расцветках,
+          и трех размерах.
+        </p>
+        <table class="page-main__product-description">
+          <tr>
+            <th class="page-main__description-element">Цвет:</th>
+            <td class="page-main__description-value">"Тиффани"/серый</td>
+          </tr>
+          <tr>
+            <th class="page-main__description-element">Диаметр:</th>
+            <td class="page-main__description-value">25 см</td>
+          </tr>
+          <tr>
+            <th class="page-main__description-element">Высота:</th>
+            <td class="page-main__description-value">15 см</td>
+          </tr>
+        </table>
 
-    <!--        <img-->
-    <!--          class="page-main__featured-image"-->
-    <!--          src="http://placehold.it/260x315"-->
-    <!--          alt="Вязаная корзинка"-->
-    <!--        />-->
-    <!--        <span class="page-main__featured-image">Цена: 990 руб.</span>-->
-    <!--        <button class="page-main__button">Заказать</button>-->
-    <!--      </section>-->
-    <!--      <section class="page-main__about-us">-->
-    <!--        <h2 class="page-main__heading">Коротко о нас:</h2>-->
-    <!--        <ul class="page-main__about-list">-->
-    <!--          <li class="page-main__about-elem page-main__about-elem&#45;&#45;eco">-->
-    <!--            Экологически чистые материалы-->
-    <!--          </li>-->
-    <!--          <li class="page-main__about-elem page-main__about-elem&#45;&#45;price">-->
-    <!--            Скандинавский стиль по российской цене-->
-    <!--          </li>-->
-    <!--          <li class="page-main__about-elem page-main__about-elem&#45;&#45;traction">-->
-    <!--            Увеличивает лайки на фотографиях-->
-    <!--          </li>-->
-    <!--          <li class="page-main__about-elem page-main__about-elem&#45;&#45;handmade">-->
-    <!--            Связано вручную с любовью и умилением-->
-    <!--          </li>-->
-    <!--          <li class="page-main__about-elem page-main__about-elem&#45;&#45;local">-->
-    <!--            Поддержка отечественного производителя-->
-    <!--          </li>-->
-    <!--          <li class="page-main__about-elem page-main__about-elem&#45;&#45;present">-->
-    <!--            Поставляется в подарочной упаковке-->
-    <!--          </li>-->
-    <!--        </ul>-->
-    <!--      </section>-->
-    <!--      <section class="page-main__reviews">-->
-    <!--        <h2 class="page-main__heading">Отзывы</h2>-->
-    <!--        <ul class="page-main__review-list">-->
-    <!--          <li class="page-main__review-elem">-->
-    <!--            <blockquote class="page-main__text">-->
-    <!--              Я молодая мама, но всё равно фотографии не набирали и близко-->
-    <!--              такого количества лайков, как у популярных инстамамочек. В-->
-    <!--              отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои-->
-    <!--              фотографии сразу стали более стильными, а также набирают больше-->
-    <!--              лайков!-->
-    <!--            </blockquote>-->
-    <!--            <cite class="page-main__review-author">-->
-    <!--              <span class="page-main__review-author-name"-->
-    <!--                >Анастасия Красильникова</span-->
-    <!--              >-->
-    <!--              <span class="page-main__review-author-username"-->
-    <!--                >@misssssiskras</span-->
-    <!--              >-->
-    <!--            </cite>-->
-    <!--          </li>-->
-    <!--        </ul>-->
-    <!--        <button class="page-main__button page-main__button&#45;&#45;left">-->
-    <!--          <span class="visually-hidden">Предыдущий отзыв</span>-->
-    <!--        </button>-->
-    <!--        <button class="page-main__button page-main__button&#45;&#45;right">-->
-    <!--          <span class="visually-hidden">Следующий отзыв</span>-->
-    <!--        </button>-->
-    <!--        <button class="page-main__button ">Написать</button>-->
-    <!--      </section>-->
-    <!--      <section class="page-main__contacts">-->
-    <!--        <h2 class="page-main__heading page-main__heading&#45;&#45;contacts">-->
-    <!--          Контакты-->
-    <!--        </h2>-->
-    <!--        <address class="page-main__contacts-wrapper">-->
-    <!--          <span>e-mail:</span>-->
-    <!--          <a-->
-    <!--            href="info@mimimishkashop.ru"-->
-    <!--            class="page-main__text page-main__text&#45;&#45;underlined"-->
-    <!--            >info@mimimishkashop.ru</a-->
-    <!--          >-->
-    <!--          <span>адрес:</span>-->
-    <!--          <span class="page-main__text">-->
-    <!--            г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101-->
-    <!--          </span>-->
-    <!--          <img-->
-    <!--            class="page-main__location-map"-->
-    <!--            src="http://placehold.it/322x457"-->
-    <!--            alt="Карта"-->
-    <!--          />-->
-    <!--        </address>-->
-    <!--        <button class="page-main__button">Напишите нам</button>-->
-    <!--      </section>-->
-    <!--    </main>-->
-    <!--    <footer class="page-footer">-->
-    <!--      <section class="page-footer__social_links">-->
-    <!--        <h2 class="visually-hidden">-->
-    <!--          Мы в социальных сетях-->
-    <!--        </h2>-->
-    <!--        <ul class="page-footer__list">-->
-    <!--          <li class="page-footer__item page-footer__item&#45;&#45;instagram">-->
-    <!--            <a href="#">Instagram</a>-->
-    <!--          </li>-->
-    <!--          <li class="page-footer__item page-footer__item&#45;&#45;facebook">-->
-    <!--            <a href="#">Facebook</a>-->
-    <!--          </li>-->
-    <!--          <li class="page-footer__item page-footer__item&#45;&#45;twitter">-->
-    <!--            <a href="#">Twitter</a>-->
-    <!--          </li>-->
-    <!--        </ul>-->
-    <!--      </section>-->
-    <!--      <span class="page-footer__made-by">-->
-    <!--        Разработано-->
-    <!--        <a class="page-footer__made-by-link" href="https://htmlacademy.ru"-->
-    <!--          ><span class="visually-hidden">HTML Academy</span></a-->
-    <!--        >-->
-    <!--      </span>-->
-    <!--    </footer>-->
+        <img
+          class="page-main__featured-image"
+          src="http://placehold.it/260x315"
+          alt="Вязаная корзинка"
+        />
+        <span class="page-main__featured-image">Цена: 990 руб.</span>
+        <button class="page-main__button">Заказать</button>
+      </section>
+      <section class="page-main__about-us about-us">
+        <h2 class="about-us__title">Коротко о нас:</h2>
+        <ul class="about-us__list">
+          <li class="about-us__elem about-us__elem--eco">
+            Экологически чистые материалы
+          </li>
+          <li class="about-us__elem about-us__elem--price">
+            Скандинавский стиль по российской цене
+          </li>
+          <li class="about-us__elem about-us__elem--traction">
+            Увеличивает лайки на фотографиях
+          </li>
+          <li class="about-us__elem about-us__elem--handmade">
+            Связано вручную с любовью и умилением
+          </li>
+          <li class="about-us__elem about-us__elem--local">
+            Поддержка отечественного производителя
+          </li>
+          <li class="about-us__elem about-us__elem--present">
+            Поставляется в подарочной упаковке
+          </li>
+        </ul>
+      </section>
+      <section class="page-main__reviews">
+        <h2 class="page-main__heading">Отзывы</h2>
+        <ul class="page-main__review-list">
+          <li class="page-main__review-elem">
+            <blockquote class="page-main__text">
+              Я молодая мама, но всё равно фотографии не набирали и близко
+              такого количества лайков, как у популярных инстамамочек. В
+              отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои
+              фотографии сразу стали более стильными, а также набирают больше
+              лайков!
+            </blockquote>
+            <cite class="page-main__review-author">
+              <span class="page-main__review-author-name"
+                >Анастасия Красильникова</span
+              >
+              <span class="page-main__review-author-username"
+                >@misssssiskras</span
+              >
+            </cite>
+          </li>
+        </ul>
+        <button class="page-main__button page-main__button--left">
+          <span class="visually-hidden">Предыдущий отзыв</span>
+        </button>
+        <button class="page-main__button page-main__button--right">
+          <span class="visually-hidden">Следующий отзыв</span>
+        </button>
+        <button class="page-main__button ">Написать</button>
+      </section>
+      <section class="page-main__contacts">
+        <h2 class="page-main__heading page-main__heading--contacts">
+          Контакты
+        </h2>
+        <address class="page-main__contacts-wrapper">
+          <span>e-mail:</span>
+          <a
+            href="info@mimimishkashop.ru"
+            class="page-main__text page-main__text--underlined"
+            >info@mimimishkashop.ru</a
+          >
+          <span>адрес:</span>
+          <span class="page-main__text">
+            г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101
+          </span>
+          <img
+            class="page-main__location-map"
+            src="http://placehold.it/322x457"
+            alt="Карта"
+          />
+        </address>
+        <button class="page-main__button">Напишите нам</button>
+      </section>
+    </main>
+    <footer class="page-footer">
+      <section class="page-footer__social_links">
+        <h2 class="visually-hidden">
+          Мы в социальных сетях
+        </h2>
+        <ul class="page-footer__list">
+          <li class="page-footer__item page-footer__item--instagram">
+            <a href="#">Instagram</a>
+          </li>
+          <li class="page-footer__item page-footer__item--facebook">
+            <a href="#">Facebook</a>
+          </li>
+          <li class="page-footer__item page-footer__item--twitter">
+            <a href="#">Twitter</a>
+          </li>
+        </ul>
+      </section>
+      <span class="page-footer__made-by">
+        Разработано
+        <a class="page-footer__made-by-link" href="https://htmlacademy.ru"
+          ><span class="visually-hidden">HTML Academy</span></a
+        >
+      </span>
+    </footer>
   </body>
 </html>
