--- a/source/index.html
+++ b/source/index.html
@@ -110,34 +110,32 @@
           </li>
         </ul>
       </section>
-      <section class="page-main__reviews">
-        <h2 class="page-main__heading">Отзывы</h2>
-        <ul class="page-main__review-list">
-          <li class="page-main__review-elem">
-            <blockquote class="page-main__text">
+      <section class="page-main__reviews reviews">
+        <h2 class="reviews_title">Отзывы</h2>
+        <ul class="reviews__list">
+          <li class="reviews__elem">
+            <blockquote class="reviews__text">
               Я молодая мама, но всё равно фотографии не набирали и близко
               такого количества лайков, как у популярных инстамамочек. В
               отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои
               фотографии сразу стали более стильными, а также набирают больше
               лайков!
             </blockquote>
-            <cite class="page-main__review-author">
-              <span class="page-main__review-author-name"
-                >Анастасия Красильникова</span
-              >
-              <span class="page-main__review-author-username"
-                >@misssssiskras</span
-              >
+            <cite class="reviews__author">
+              <span class="reviews__author-name">Анастасия Красильникова</span>
+              <span class="reviews__author-username">@misssssiskras</span>
             </cite>
           </li>
         </ul>
-        <button class="page-main__button page-main__button--left">
-          <span class="visually-hidden">Предыдущий отзыв</span>
-        </button>
-        <button class="page-main__button page-main__button--right">
-          <span class="visually-hidden">Следующий отзыв</span>
-        </button>
-        <button class="page-main__button ">Написать</button>
+        <div class="reviews__controls">
+          <button class="reviews__button reviews__button--left">
+            <span class="visually-hidden">Предыдущий отзыв</span>
+          </button>
+          <button class="reviews__button reviews__button--right">
+            <span class="visually-hidden">Следующий отзыв</span>
+          </button>
+        </div>
+        <button class="button ">Написать</button>
       </section>
       <section class="page-main__contacts">
         <h2 class="page-main__heading page-main__heading--contacts">
@@ -163,29 +161,5 @@
         <button class="page-main__button">Напишите нам</button>
       </section>
     </main>
-    <footer class="page-footer">
-      <section class="page-footer__social_links">
-        <h2 class="visually-hidden">
-          Мы в социальных сетях
-        </h2>
-        <ul class="page-footer__list">
-          <li class="page-footer__item page-footer__item--instagram">
-            <a href="#">Instagram</a>
-          </li>
-          <li class="page-footer__item page-footer__item--facebook">
-            <a href="#">Facebook</a>
-          </li>
-          <li class="page-footer__item page-footer__item--twitter">
-            <a href="#">Twitter</a>
-          </li>
-        </ul>
-      </section>
-      <span class="page-footer__made-by">
-        Разработано
-        <a class="page-footer__made-by-link" href="https://htmlacademy.ru"
-          ><span class="visually-hidden">HTML Academy</span></a
-        >
-      </span>
-    </footer>
   </body>
 </html>
