Style featured product

--- a/source/index.html
+++ b/source/index.html
@@ -57,35 +57,35 @@
           </li>
         </ul>
       </nav>
-      <section class="page-main__featured-product">
-        <span class="page-main__heading">Вязаные корзинки</span>
-        <h2 class="page-main__subheader">Товар недели</h2>
-        <p class="page-main__text">
+      <section class="page-main__fproduct fproduct">
+        <span class="fproduct__title">Вязаные корзинки</span>
+        <h2 class="fproduct__subtitle">Товар недели</h2>
+        <p class="fproduct__text">
           Экологически чистая пряжа, ручная работа. Доступны в шести расцветках,
           и трех размерах.
         </p>
-        <table class="page-main__product-description">
-          <tr>
-            <th class="page-main__description-element">Цвет:</th>
-            <td class="page-main__description-value">"Тиффани"/серый</td>
+        <table class="fproduct__table">
+          <tr class="fproduct__row">
+            <th class="fproduct__prop">Цвет:</th>
+            <td class="fproduct__val">"Тиффани"/серый</td>
           </tr>
-          <tr>
-            <th class="page-main__description-element">Диаметр:</th>
-            <td class="page-main__description-value">25 см</td>
+          <tr class="fproduct__row">
+            <th class="fproduct__prop">Диаметр:</th>
+            <td class="fproduct__val">25 см</td>
           </tr>
-          <tr>
-            <th class="page-main__description-element">Высота:</th>
-            <td class="page-main__description-value">15 см</td>
+          <tr class="fproduct__row">
+            <th class="fproduct__prop">Высота:</th>
+            <td class="fproduct__val">15 см</td>
           </tr>
         </table>
 
         <img
-          class="page-main__featured-image"
-          src="http://placehold.it/260x315"
+          class="fproduct__image"
+          src="./img/triple-set-mobile@1x.jpg"
           alt="Вязаная корзинка"
         />
-        <span class="page-main__featured-image">Цена: 990 руб.</span>
-        <button class="page-main__button">Заказать</button>
+        <span class="fproduct__price">Цена: 990 руб.</span>
+        <button class="button">Заказать</button>
       </section>
       <section class="page-main__about-us about-us">
         <h2 class="about-us__title">Коротко о нас:</h2>
@@ -137,7 +137,7 @@
         </div>
         <button class="button ">Написать</button>
       </section>
-      <section class="page-main__contacts">
+      <section class="page-main__contacts contacts">
         <h2 class="page-main__heading page-main__heading--contacts">
           Контакты
         </h2>
