Add links for for catalog pages

--- a/source/index.html
+++ b/source/index.html
@@ -47,13 +47,19 @@
           Милые штуки ручной работы для дома
         </p>
       </div>
-      <nav class="page-main__catalog-links">
-        <ul class="page-main__catalog-list">
-          <li class="page-main__catalog-item page-main__catalog-item--interior">
-            <a href="#">Предметы интерьера</a>
+      <nav class="page-main__cat-links cat-links">
+        <ul class="cat-links__list">
+          <li class="cat-links__item cat-links__item--interior">
+            <a class="cat-links__link" href="#"
+              >Предметы <br />
+              интерьера</a
+            >
           </li>
-          <li class="page-main__catalog-item page-main__catalog-item--toys">
-            <a href="#">Детские игрушки</a>
+          <li class="cat-links__item cat-links__item--toys">
+            <a class="cat-links__link" href="#"
+              >Детские <br />
+              игрушки</a
+            >
           </li>
         </ul>
       </nav>
