--- a/source/index.html
+++ b/source/index.html
@@ -144,27 +144,29 @@
         <button class="button ">Написать</button>
       </section>
       <section class="page-main__contacts contacts">
-        <h2 class="page-main__heading page-main__heading--contacts">
+        <h2 class="contacts__title">
           Контакты
         </h2>
-        <address class="page-main__contacts-wrapper">
-          <span>e-mail:</span>
-          <a
-            href="info@mimimishkashop.ru"
-            class="page-main__text page-main__text--underlined"
-            >info@mimimishkashop.ru</a
-          >
-          <span>адрес:</span>
-          <span class="page-main__text">
-            г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101
-          </span>
-          <img
-            class="page-main__location-map"
-            src="http://placehold.it/322x457"
-            alt="Карта"
-          />
+        <address class="contacts__address">
+          <table class="contacts__table">
+            <tr>
+              <th class="contacts__prop">e-mail:</th>
+              <td class="contacts__val contacts__val--email">
+                <a href="info@mimimishkashop.ru" class="contacts__link"
+                  >info@mimimishkashop.ru</a
+                >
+              </td>
+            </tr>
+            <tr>
+              <th class="contacts__prop">адрес:</th>
+              <td class="contacts__val">
+                г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101
+              </td>
+            </tr>
+          </table>
         </address>
-        <button class="page-main__button">Напишите нам</button>
+        <img class="contacts__map" src="./img/map-mobile@1x.jpg" alt="Карта" />
+        <button class="button">Напишите нам</button>
       </section>
     </main>
   </body>
