Change button to link because of review comments
https://github.com/htmlacademy-adaptive/161913-mishka-16/pull/2#issuecomment-482623146

--- a/source/index.html
+++ b/source/index.html
@@ -91,7 +91,7 @@
           alt="Вязаная корзинка"
         />
         <span class="fproduct__price">Цена: 990 руб.</span>
-        <button class="button">Заказать</button>
+        <a class="button">Заказать</a>
       </section>
       <section class="page-main__about-us about-us">
         <h2 class="about-us__title">Коротко о нас:</h2>
